added missing images fixed special characters added new analytics hide rss until fix fixed css

--- a/_includes/post_index.html
+++ b/_includes/post_index.html
@@ -8,7 +8,7 @@
     <div class="button-container">
       <a class="read-more button" href="{{post.url}}">Continue reading</a>
     </div>
-    <a class="read-more is-uppercase" href="{{post.url}}">Continue →</a>
+    <a class="read-more is-uppercase" href="{{post.url}}">Continue &#8594;</a>
   {% endif %}
   {% if site.data.svbtle.enable_kudos %}
     <script>
