--- a/assets/stylesheets/kudos.css
+++ b/assets/stylesheets/kudos.css
@@ -27,7 +27,7 @@
 
 .kudo.hide-deep {
   right: -100px;
-  z-index: 0; 
+  z-index: 0;
 }
 
 .kudo a {
@@ -146,7 +146,7 @@
   transition-property: none;
   animation: bounce 1s;
   animation-iteration-count: 1;
-  background-color: #F40000;
+  background-color: #3A74D0;
   transform: scale(2.8);
   -webkit-transition-property: none;
   -webkit-animation: bounce 1s;
