--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -1,4 +1,4 @@
-html, 
+html,
 body {
   height: 100%;
   width: 100%;
@@ -22,7 +22,7 @@ body {
   color: #fff;
 }
 
-:-ms-input-placeholder {  
+:-ms-input-placeholder {
   color: #fff;
 }
 
@@ -54,13 +54,13 @@ a:visited {
   text-decoration: none;
 }
 
-/* Colors Guide 
+/* Colors Guide
     red:    #F40000
     gray:   #909090
 */
 
 .avatar {
-  background-color: #F40000;
+  background-color: #3A74D0;
   border-radius: 50%;
   height: 90px;
   width: 90px;
@@ -191,7 +191,7 @@ a:visited {
 .profile-links > li {
   display: inline-block;
   height: 33px;
-  line-height: 18px; 
+  line-height: 18px;
   color: rgba(144,144,144, .4);
   margin-top: 15px;
   font-size: 14px;
@@ -258,7 +258,7 @@ hr {
   height: 1px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;  
+  -moz-border-radius: 5px;
   color: #f4f3f3;
 }
 
@@ -316,7 +316,7 @@ article:nth-child(3)::before,
 
 *::before,
 .read-first {
-  font-size: 14px; /*change the original to maintain the same look with different font*/ 
+  font-size: 14px; /*change the original to maintain the same look with different font*/
 }
 
 .tag,
@@ -393,7 +393,7 @@ article::before {
 .instapaper {
   font-weight: bold;
   color: #000;
-} 
+}
 
 article:nth-child(2) .title {
   line-height: 43px;
@@ -560,7 +560,7 @@ article .read-more.button{
   margin: 1rem 0 1rem 70%;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
-  background: url(https://dtu1xr3i3b2a1.cloudfront.net/cargo/icons/arrow_down_black-4309ed2aa9ced3b702d2eda70ce014f5.png) no-repeat 50%;
+  background: url(/assets/images/arrow_down_black.png) no-repeat 50%;
   background-origin: padding-box;
   background-size: 12px 7px;
   position: fixed;
@@ -574,7 +574,7 @@ article .read-more.button{
 
 .side-nav__button.active {
   opacity: 1;
-  background: url(https://dtu1xr3i3b2a1.cloudfront.net/cargo/icons/x_black_2x-6906acfa952d431ed14dbc82c656f72c.png) 6px 5.5px no-repeat;
+  background: url(/assets/images/x_black.png) 6px 5.5px no-repeat;
   background-size: 50%;
 }
 
@@ -597,6 +597,10 @@ article .read-more.button{
   padding-right: 8%;
 }
 
+.about{
+  display:none;
+}
+
 /* Pagination */
 
 nav.pagination {
@@ -606,7 +610,7 @@ nav.pagination {
   color: #363636;
 }
 
-nav.pagination span.next a, 
+nav.pagination span.next a,
 nav.pagination span.prev a {
   padding: 10px;
   padding-left: 20px;
@@ -857,7 +861,7 @@ nav.pagination span.next {
   font-weight: bold;
 }
 
-.anchor-icon .fa, 
+.anchor-icon .fa,
 .anchor-icon time {
   -webkit-transition-property: all;
   transition-property: all;
@@ -887,7 +891,7 @@ nav.pagination span.next {
   font-weight: bold;
 }
 
-.anchor-icon:hover .fa.fa-anchor, 
+.anchor-icon:hover .fa.fa-anchor,
 .anchor-icon:hover time {
   color: #000;
   opacity: 1;
@@ -923,7 +927,7 @@ nav.pagination span.next {
   color: #000;
 }
 
-.detail-view .title:hover + .anchor-icon .fa-anchor, 
+.detail-view .title:hover + .anchor-icon .fa-anchor,
 .detail-view .title:hover + .anchor-icon time {
   color: #000;
   opacity: 1;
