added copyright footer

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -114,9 +114,9 @@
         <h5>{{site.data.svbtle.subtitle}}</h5>
       </footer>
 
-      <div class="copyright tag">
-        &#169; 2014
-      </div>
+      <footer id="foot">
+        <figure id="logo_foot"><a href="">&#169; 2014</a></figure>
+      </footer>
     </div>
 
     <div class="side-nav-container">
