--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -51,7 +51,26 @@
       </script>
     {% endif %}
   </head>
-  <body style="zoom: 1;">
+  <body style="zoom: 1;" class="overlord blog loaded">
+    <figure id="loading">&nbsp;</figure>
+    <nav id="overlord" class="">
+      <figure id="logo_top" class="">
+        <a href="/">{{site.data.svbtle.blog_url}}</a>
+      </figure>
+      <figure id="hamburger">
+        <a href="#menu" id="hamburger_button">Menu</a>
+      </figure>
+      <ul id="dropdown" class="onblog">
+        <li class="dropdown_message">
+         <a href="http://{{site.data.svbtle.blog_url}}">{{site.data.svbtle.profile_name}}</a>
+        </li>
+        <li><a href="https://twitter.com/{{site.data.svbtle.twitter}}">@{{site.data.svbtle.twitter}}</a></li>
+        <li><a href="http://{{site.data.svbtle.website_url}}" rel="nofollow">{{site.data.svbtle.website_name}}</a></li>
+        <li><a href="{{site.data.svbtle.email_with_subject}}">Contact</a></li>
+        <li><a href="/feed">rss feed</a></li>
+        <li style="margin: 0; padding: 0;"><hr class="overlord_nav"></li>
+      </ul>
+    </nav>
     <div class="main-container main-view">
 
       <div class="mlogotype is-uppercase">
@@ -156,5 +175,6 @@
     </div>
 
     <script src="/assets/javascripts/js.js"></script>
+    <script src="/assets/javascripts/script.js"></script>
   </body>
 </html>
