--- a/_layouts/detail.html
+++ b/_layouts/detail.html
@@ -70,7 +70,19 @@
         <li style="margin: 0; padding: 0;"><hr class="overlord_nav"></li>
       </ul>
     </nav>
-
+    <div id="whiteout"></div>
+    <header id="user_top" class="cf ">
+      <figure id="user_logo" class="active"><a href="//{{site.data.svbtle.blog_url}}">{{site.data.svbtle.blog_name}}</a></figure>
+      <h2><a href="//{{site.data.svbtle.blog_url}}">{{site.data.svbtle.blog_name}}</a></h2>
+      <h4><span class="name_head">by</span> {{site.data.svbtle.profile_name}}</h4>
+      <h3>JavaScript programmer, O'Reilly author.
+    </h3>
+      <ul id="user_links">
+        <li><a href="https://twitter.com/{{site.data.svbtle.twitter}}">@{{site.data.svbtle.twitter}}</a></li>
+        <li><a href="{{site.data.svbtle.email_with_subject}}">Contact</a></li>
+        <li><a href="http://{{site.data.svbtle.website_url}}" rel="nofollow">{{site.data.svbtle.website_name}}</a></li>
+      </ul>
+    </header>
     <div class="main-container">
 
       <div class="mlogotype is-uppercase">
